# personal-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
server/: config.py  main.py
server/tools/: coach.py  finance.py
tests/: conftest.py  test_coach.py  test_finance_tools.py
